# senseair-rs

./: Cargo.toml  README.md
src/: lib.rs
src/co2/: i2c.rs  mod.rs
